<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SelectTypeActivity">

    <Button
        android:id="@+id/btnGenQR"
        android:layout_width="500dp"
        android:layout_height="150dp"
        android:layout_marginTop="444dp"

        android:backgroundTint="@color/primaryLightColor"
        android:text="@string/generate_qr_code"
        android:textSize="30dp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:onClick="onClick_GenQR"/>

    <Button
        android:id="@+id/btnScanQR"
        android:layout_width="500dp"
        android:layout_height="150dp"
        android:layout_marginTop="60dp"

        android:backgroundTint="@color/primaryLightColor"
        android:text="@string/scan_qr_code"
        android:textSize="30dp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnGenQR"
        android:onClick="onClick_ScanQR"/>

    <Button
        android:id="@+id/btnChangeLan"
        android:layout_width="200dp"
        android:layout_height="100dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:text="@string/change_lan"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:textSize="20dp"
        android:textStyle="bold"
        android:onClick="onClick_changeLan"/>

</androidx.constraintlayout.widget.ConstraintLayout>