<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".QuestionActivity">


    <TextView
        android:id="@+id/tv_Question"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_marginStart="17dp"
        android:layout_marginTop="260dp"
        android:layout_marginEnd="18dp"
        android:gravity="center"
        android:text=""
        android:textSize="50dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/et_Ans"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="101dp"
        android:layout_marginTop="120dp"
        android:layout_marginEnd="101dp"
        android:ems="10"
        android:gravity="center"
        android:inputType="text"
        android:text=""
        android:visibility="invisible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_Question" />






    <RadioGroup
        android:id="@+id/radio_group"
        android:layout_width="219dp"
        android:layout_height="56dp"
        android:layout_marginTop="172dp"
        android:orientation="horizontal"
        android:visibility="invisible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_Question">

        <RadioButton
            android:id="@+id/radio_ys"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/yes" />

        <RadioButton
            android:id="@+id/radio_no"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/no" />
    </RadioGroup>







    <RadioGroup
        android:id="@+id/radio_group_mc"
        android:layout_width="490dp"
        android:layout_height="70dp"
        android:layout_marginTop="120dp"
        android:orientation="horizontal"
        android:visibility="invisible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_Question">

        <RadioButton
            android:id="@+id/radio_o1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="option1" />

        <RadioButton
            android:id="@+id/radio_o2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="option2" />

        <RadioButton
            android:id="@+id/radio_o3"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="option3" />

        <RadioButton
            android:id="@+id/radio_o4"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="option4" />

    </RadioGroup>

    <Button
        android:id="@+id/btn_next"
        android:layout_width="500dp"
        android:layout_height="150dp"
        android:layout_marginStart="121dp"
        android:layout_marginTop="404dp"
        android:layout_marginEnd="121dp"
        android:backgroundTint="@color/smartFromColor"
        android:onClick="onClickNext"
        android:text="@string/next_question"
        android:textSize="30dp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_Question" />

    <!--    <TextView-->
    <!--        android:id="@+id/tv_showAPI"-->
    <!--        android:layout_width="358dp"-->
    <!--        android:layout_height="201dp"-->
    <!--        android:layout_marginStart="26dp"-->
    <!--        android:layout_marginTop="54dp"-->
    <!--        android:layout_marginEnd="27dp"-->
    <!--        android:text="TextView"-->
    <!--        app:layout_constraintEnd_toEndOf="parent"-->
    <!--        app:layout_constraintStart_toStartOf="parent"-->
    <!--        app:layout_constraintTop_toBottomOf="@+id/btn_next" />-->

    <!--    dasdasd-->
</androidx.constraintlayout.widget.ConstraintLayout>